Blog dates now wrap correctly

--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -11,11 +11,13 @@
 
   .post-title-container {
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: flex-start;
 
     @include respond-above(sm) {
+      flex-direction: row;
       flex-wrap: nowrap;
     }
 
